--- a/ChatterBox.Common/Views/SettingsView.xaml
+++ b/ChatterBox.Common/Views/SettingsView.xaml
@@ -1,15 +1,26 @@
-﻿<UserControl
+﻿<Page
     x:Class="ChatterBox.Common.Views.SettingsView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ChatterBox.Common.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    d:DesignHeight="300"
-    d:DesignWidth="400">
-    
-    <Grid>
+    mc:Ignorable="d">
 
+    <Grid Name="SettingsMainGrid">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <StackPanel Name="BottomStackPanel" 
+                    Grid.Row="1"
+                    Orientation="Horizontal">
+            <Button Name="BackButton" 
+                    Content="&#xE112;"
+                    FontFamily="Segoe UI Symbol"
+                    Margin="5"
+                    Command="{Binding BackButtonCommand}" />
+        </StackPanel>
     </Grid>
-</UserControl>
+    
+</Page>
