--- a/ChatterBox.Client.Universal/App.xaml
+++ b/ChatterBox.Client.Universal/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="ChatterBox.Win10.App"
+    x:Class="ChatterBox.Client.Universal.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ChatterBox.Win10"
+    xmlns:local="using:ChatterBox.Client.Universal"
     RequestedTheme="Light">
 
 </Application>
