--- a/ChatterBox.Client.Win8.1/App.xaml
+++ b/ChatterBox.Client.Win8.1/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application
-    x:Class="ChatterBox.Win8.App"
+    x:Class="ChatterBox.Client.Win8._1.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ChatterBox.Win8">
+    xmlns:local="using:ChatterBox.Client.Win8._1">
 
 </Application>
