--- a/ChatterBox.Client.Win8.1/MainPage.xaml
+++ b/ChatterBox.Client.Win8.1/MainPage.xaml
@@ -1,11 +1,11 @@
 ﻿<Page
-    x:Class="ChatterBox.Win10.MainPage"
+    x:Class="ChatterBox.Client.Win8._1.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ChatterBox.Win10"
+    xmlns:local="using:ChatterBox.Client.Win8._1"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:chatterbox="using:ChatterBox.Common.Views"
+    xmlns:chatterbox="using:ChatterBox.Client.Common.Views"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
