Integrated peer list and presence with the client.

--- a/ChatterBox.Client.Presentation.Shared/Views/MainView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/MainView.xaml
@@ -14,6 +14,11 @@
     </Page.Resources>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <views:RegistrationView DataContext="{Binding RegistrationViewModel}"  Visibility="{Binding IsRegistrationCompleted, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+        <Grid Visibility="{Binding IsSetupCompleted, Converter={StaticResource BooleanToVisibilityInvertedConverter}}">
+            <views:WelcomeView DataContext="{Binding WelcomeViewModel}" />
+        </Grid>
+        <Grid Visibility="{Binding IsSetupCompleted, Converter={StaticResource BooleanToVisibilityConverter}}">
+            <views:ContactsView DataContext="{Binding ContactsViewModel}" />
+        </Grid>
     </Grid>
 </Page>
