--- a/ChatterBox.Client.Presentation.Shared/Views/WelcomeView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/WelcomeView.xaml
@@ -9,21 +9,52 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid >
-        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-            <TextBlock Text="Welcome" FontSize="24" HorizontalAlignment="Center" ></TextBlock>
-            <StackPanel Margin="0,20" HorizontalAlignment="Center">
-                <TextBlock Text="Name" VerticalAlignment="Center"/>
-                <TextBox Text="{Binding Name, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}" Width="150"/>
-            </StackPanel>
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+        <Grid HorizontalAlignment="Stretch" 
+              Margin="20"
+              VerticalAlignment="Top">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+            <TextBlock Text="Welcome"
+                       Grid.Row="0"
+                       Margin="0,0,0,20"
+                       FontSize="24"
+                       HorizontalAlignment="Center" />
+            
+            <TextBlock Text="Display Name"
+                       Margin="0,5"
+                       Grid.Row="1"
+                       VerticalAlignment="Center"/>
+            <TextBox Text="{Binding Name, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}" 
+                     Margin="0,10"
+                     Grid.Row="2"
+                     MinWidth="150"/>
 
-            <StackPanel Margin="0,20" HorizontalAlignment="Center">
-                <TextBlock Text="Domain" VerticalAlignment="Center"/>
-                <TextBox Text="{Binding Domain, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}" Width="150"/>
-            </StackPanel>
+            <TextBlock Text="Domain" 
+                       Margin="0, 5"
+                       Grid.Row="3"
+                       VerticalAlignment="Center"/>
+            <TextBox Text="{Binding Domain, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}" 
+                     Margin="0,10"
+                     Grid.Row="4"
+                     MinWidth="150"/>
+        </Grid>
 
-            <Button Content="Next" Command="{Binding CompleteCommand}" HorizontalAlignment="Right" />
+        <Button Content="Next" 
+                Margin="15"
+                Grid.Row="1"
+                Command="{Binding CompleteCommand}"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Right" />
 
-        </StackPanel>
     </Grid>
 </UserControl>
