--- a/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
@@ -18,22 +18,47 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <TextBlock Text="{Binding Contact}" 
-                   Margin="12,5"
-                   Grid.Row="0"
-                   Grid.Column="0"/>
-        <StackPanel Orientation="Horizontal"
-                    HorizontalAlignment="Right"
-                    Grid.Row="0"
-                    Grid.Column="1">
+        <StackPanel Orientation="Horizontal">
             <Button Command="{Binding CloseChat}" 
                     Margin="5"
                     FontFamily="Segoe UI Symbol"
                     Content="&#xE112;"/>
+            <TextBlock Text="{Binding Contact}" 
+                       Margin="12,5"
+                       VerticalAlignment="Center"
+                       Grid.Row="0"
+                       Grid.Column="0"/>
         </StackPanel>
-        <TextBox PlaceholderText="Enter a message"
-                 Margin="12,5"
-                 Grid.Row="2"
-                 Grid.ColumnSpan="2"/>
+        <StackPanel Orientation="Horizontal"
+                    HorizontalAlignment="Right"
+                    Grid.Row="0"
+                    Grid.Column="1">
+            <Button Command="{Binding CallOnlyAudio}" 
+                    Margin="5"
+                    Foreground="Green"
+                    FontFamily="Segoe UI Symbol"
+                    Content="&#xE13A;"/>
+            <Button Command="{Binding Call}" 
+                    Margin="5"
+                    Foreground="Green"
+                    FontFamily="Segoe UI Symbol"
+                    Content="&#xE116;"/>
+        </StackPanel>
+        <Grid Grid.Row="2"
+              Grid.ColumnSpan="2" >
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <TextBox PlaceholderText="Enter a message"
+                     Grid.Column="0"
+                     Margin="12,5" />
+            <Button Command="{Binding Send}" 
+                    Margin="5"
+                    Grid.Column="1"
+                    FontFamily="Segoe UI Symbol"
+                    HorizontalContentAlignment="Left"
+                    Content="&#xE122;"/>
+        </Grid>
     </Grid>
 </UserControl>
