--- a/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
@@ -5,9 +5,13 @@
     xmlns:local="using:ChatterBox.Client.Presentation.Shared.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="using:ChatterBox.Client.Presentation.Shared.Converters"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.Resources>
+        <converters:BooleanToVisibilityConverter x:Key="BoolToVisConverter" />
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -20,6 +24,7 @@
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Horizontal">
             <Button Command="{Binding CloseChat}" 
+                    Visibility="{Binding IsBackButtonEnabled, Converter={StaticResource BoolToVisConverter}}"
                     Margin="5"
                     FontFamily="Segoe UI Symbol"
                     Content="&#xE112;"/>
