--- a/ChatterBox.Client.Presentation.Shared/Views/MainView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/MainView.xaml
@@ -10,28 +10,59 @@
     <Page.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         <converters:NegatedBoolConverter x:Key="NegatedBoolConverter" />
+        <Style x:Key="OverlayStyle" TargetType="ItemsControl">
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <Grid />
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>            
+        </Style>
+        <Style x:Key="ParallelStyle" TargetType="ItemsControl">
+            <Setter Property="ItemsPanel">
+                <Setter.Value>
+                    <ItemsPanelTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" MinWidth="400" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                        </Grid>
+                    </ItemsPanelTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <converters:AppStateToStyleConverter x:Key="AppStateToStyleConverter" ParallelStyle="{StaticResource ParallelStyle}" OverlayStyle="{StaticResource OverlayStyle}" />
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <ItemsControl Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" 
+                  Style="{Binding AppState, Converter={StaticResource AppStateToStyleConverter}}">
         <Grid Visibility="{Binding IsWelcomeOpen, Converter={StaticResource BooleanToVisibilityConverter}}"
-              Name="WelcomeGrid">
+              Name="WelcomeGrid"
+              Grid.Column="0">
             <views:WelcomeView DataContext="{Binding WelcomeViewModel}" />
         </Grid>
         <Grid Visibility="{Binding IsContactsOpen, Converter={StaticResource BooleanToVisibilityConverter}}"
-              Name="ContactsGrid">
+              Name="ContactsGrid"
+              Grid.Column="0">
             <views:ContactsView DataContext="{Binding ContactsViewModel}" />
         </Grid>
+        
         <Grid Visibility="{Binding IsSettingsOpen, Converter={StaticResource BooleanToVisibilityConverter}}"
-              Name="SettingsGrid" >
+              Name="SettingsGrid" 
+              Grid.Column="1">
             <views:SettingsView DataContext="{Binding SettingsViewModel}" />
         </Grid>
         <Grid Visibility="{Binding IsChatOpen, Converter={StaticResource BooleanToVisibilityConverter}}" 
-              Name="ChatGrid" >
+              Name="ChatGrid"
+              Grid.Column="1">
             <views:ChatView DataContext="{Binding ChatViewModel}" />
         </Grid>
         <Grid Visibility="{Binding IsCallOpen, Converter={StaticResource BooleanToVisibilityConverter}}" 
-              Name="CallGrid">
+              Name="CallGrid"
+              Grid.Column="1">
             <views:CallView DataContext="{Binding CallViewModel}" />
         </Grid>
-    </Grid>
+    </ItemsControl>
 </Page>
