--- a/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/SettingsView.xaml
@@ -5,22 +5,26 @@
     xmlns:local="using:ChatterBox.Client.Presentation.Shared.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
+    mc:Ignorable="d"    
     d:DesignHeight="300"
     d:DesignWidth="400">
-    
-    <Grid>
+
+    <Grid Background="{StaticResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
-            <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Margin="12,5">Settings part</TextBlock>
-        <Button Name="CloseButton" 
-                Command="{Binding Close}"
-                Margin="12,5"
-                Background="{ThemeResource ButtonBackgroundThemeBrush}"
-                FontFamily="Segoe UI Symbol"
-                Content="&#xE112;"
-                Grid.Row="2"/>
+        <StackPanel Orientation="Horizontal" >
+            <Button Name="CloseButton" 
+                    Command="{Binding Close}"
+                    Margin="12,5"
+                    Background="{ThemeResource ButtonBackgroundThemeBrush}"
+                    FontFamily="Segoe UI Symbol"
+                    Content="&#xE112;"
+                    Grid.Row="2"/>
+            <TextBlock Margin="12,5"
+                       VerticalAlignment="Center"
+                       Text="Settings" />
+        </StackPanel>
     </Grid>
 </UserControl>
