--- a/ChatterBox.Client.Presentation.Shared/Views/WelcomeView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/WelcomeView.xaml
@@ -9,13 +9,13 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <Grid HorizontalAlignment="Stretch"
-              Margin="20"
+              Margin="12,5"
               VerticalAlignment="Top">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -31,20 +31,18 @@
                        HorizontalAlignment="Center" />
 
             <TextBlock Text="Display Name"
-                       Margin="0,5"
                        Grid.Row="1"
                        VerticalAlignment="Center" />
             <TextBox Text="{Binding Name, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}"
-                     Margin="0,10"
+                     Margin="0,10,0,20"
                      Grid.Row="2"
                      MinWidth="150" />
 
             <TextBlock Text="Domain"
-                       Margin="0, 5"
                        Grid.Row="3"
                        VerticalAlignment="Center" />
             <TextBox Text="{Binding Domain, Mode=TwoWay , UpdateSourceTrigger=PropertyChanged}"
-                     Margin="0,10"
+                     Margin="0,10,0,20"
                      Grid.Row="4"
                      MinWidth="150" />
         </Grid>
