--- a/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
@@ -9,7 +9,7 @@
     xmlns:services="using:ChatterBox.Client.Presentation.Shared.Services"
     mc:Ignorable="d"
     d:DesignHeight="300"
-    d:DesignWidth="400">
+    d:DesignWidth="400" x:Name="ChatViewRoot">
     <UserControl.Resources>
         <services:ServicesBindingHelper x:Key="ServicesBindingHelper" />
         <converters:LayoutTypeToStyleConverter x:Key="CloseConversationButtonStyleConverter">
@@ -24,44 +24,75 @@
                 </Style>
             </converters:LayoutTypeToStyleConverter.ParallelStyle>
         </converters:LayoutTypeToStyleConverter>
-        <Style x:Key="IMBaseStyle" TargetType="ListBoxItem">
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="ListBoxItem">
-                        <Grid Margin="3">
-                            <Border CornerRadius="5" Background="{TemplateBinding Background}" Opacity=".2" />
-                            <Border Margin="5">
-                                <Grid>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition />
-                                        <RowDefinition />
-                                    </Grid.RowDefinitions>
-                                    <StackPanel>
-                                        <TextBlock Text="{Binding Sender}" />
-                                        <TextBlock Text="{Binding DateTime}" />
-                                    </StackPanel>
-                                    <TextBlock Grid.Row="1" Text="{Binding Message}" TextWrapping="WrapWholeWords" />
-                                </Grid>
-
-                            </Border>
-                        </Grid>
-
-
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
         <styleSelectors:InstantMessageStyleSelector x:Key="InstantMessageStyleSelector">
             <styleSelectors:InstantMessageStyleSelector.PeerMessageStyle>
-                <Style TargetType="ListBoxItem" BasedOn="{StaticResource IMBaseStyle}">
+                <Style TargetType="ListBoxItem">
                     <Setter Property="Background" Value="CornflowerBlue" />
                     <Setter Property="Margin" Value="0,0,40,0" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <Grid Margin="3">
+                                    <Border CornerRadius="5" Background="{TemplateBinding Background}" Opacity=".2" />
+                                    <Border Margin="5">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Image Grid.RowSpan="2" VerticalAlignment="Top" Height="48" Width="48"
+                                                   Margin="5"
+                                                   Source="{Binding Path=DataContext.ProfileSource, ElementName=ChatViewRoot}" />
+                                            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Message}"
+                                                       TextWrapping="WrapWholeWords" />
+                                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding DateTime}"
+                                                       FontSize="11" Foreground="DarkGray" Margin="0,10,0,0"
+                                                       HorizontalAlignment="Right" />
+                                        </Grid>
+                                    </Border>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </styleSelectors:InstantMessageStyleSelector.PeerMessageStyle>
             <styleSelectors:InstantMessageStyleSelector.OwnMessageStyle>
-                <Style TargetType="ListBoxItem" BasedOn="{StaticResource IMBaseStyle}">
+                <Style TargetType="ListBoxItem">
                     <Setter Property="Background" Value="LightSkyBlue" />
                     <Setter Property="Margin" Value="40,0,0,0" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBoxItem">
+                                <Grid Margin="3">
+                                    <Border CornerRadius="5" Background="{TemplateBinding Background}" Opacity=".2" />
+                                    <Border Margin="5">
+                                        <Grid>
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="Auto" />
+                                                <ColumnDefinition Width="*" />
+                                            </Grid.ColumnDefinitions>
+                                            <Grid.RowDefinitions>
+                                                <RowDefinition Height="Auto" />
+                                                <RowDefinition Height="Auto" />
+                                            </Grid.RowDefinitions>
+                                            <Image Grid.RowSpan="2" VerticalAlignment="Top" Height="48" Width="48"
+                                                   Margin="5"
+                                                   Source="{Binding Path=DataContext.OwnProfileSource, ElementName=ChatViewRoot}" />
+                                            <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Message}"
+                                                       TextWrapping="WrapWholeWords" />
+                                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding DateTime}"
+                                                       FontSize="11" Foreground="DarkGray" Margin="0,10,0,0"
+                                                       HorizontalAlignment="Right" />
+                                        </Grid>
+                                    </Border>
+                                </Grid>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
             </styleSelectors:InstantMessageStyleSelector.OwnMessageStyle>
         </styleSelectors:InstantMessageStyleSelector>
