--- a/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
+++ b/ChatterBox.Client.Presentation.Shared/Views/ChatView.xaml
@@ -12,7 +12,7 @@
     d:DesignHeight="300"
     d:DesignWidth="400" x:Name="ChatViewRoot">
     <UserControl.Resources>
-        <converters:FormatDateTimeConverter x:Key="FormatDateTimeConverter" Format="H:mm:ss"/>
+        <converters:FormatDateTimeConverter x:Key="FormatDateTimeConverter" Format="H:mm:ss" />
         <services:ServicesBindingHelper x:Key="ServicesBindingHelper" />
         <converters:LayoutTypeToStyleConverter x:Key="CloseConversationButtonStyleConverter">
             <converters:LayoutTypeToStyleConverter.OverlayStyle>
@@ -51,7 +51,7 @@
                                                    Source="{Binding Path=DataContext.ProfileSource, ElementName=ChatViewRoot}" />
                                             <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Message}"
                                                        TextWrapping="WrapWholeWords" />
-                                            <TextBlock Grid.Column="1" Grid.Row="1" 
+                                            <TextBlock Grid.Column="1" Grid.Row="1"
                                                        Text="{Binding DateTime, Converter={StaticResource FormatDateTimeConverter}}"
                                                        FontSize="11" Foreground="DarkGray" Margin="0,10,0,0"
                                                        HorizontalAlignment="Right" />
@@ -87,7 +87,8 @@
                                                    Source="{Binding Path=DataContext.OwnProfileSource, ElementName=ChatViewRoot}" />
                                             <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding Message}"
                                                        TextWrapping="WrapWholeWords" />
-                                            <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding DateTime, Converter={StaticResource FormatDateTimeConverter}}"
+                                            <TextBlock Grid.Column="1" Grid.Row="1"
+                                                       Text="{Binding DateTime, Converter={StaticResource FormatDateTimeConverter}}"
                                                        FontSize="11" Foreground="DarkGray" Margin="0,10,0,0"
                                                        HorizontalAlignment="Right" />
                                         </Grid>
@@ -129,7 +130,7 @@
 
         </Grid>
         <ListBox x:Name="InstantMessagingHistory" Grid.Row="1" ItemsSource="{Binding InstantMessages}"
-                  Margin="12,5" 
+                 Margin="12,5"
                  Background="Transparent"
                  ItemContainerStyleSelector="{StaticResource InstantMessageStyleSelector}" />
 
